--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/edittags.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/edittags.jspx
@@ -144,13 +144,14 @@
 
 		<jsp:attribute name="sidebar">
 
-			<!-- TODO: refactor and use it also in user.jspx -->
-			<sidebar:sidebarItem textKey="tagrelations">
-				<jsp:attribute name="content">
-					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${true}" requestedUserName="${command.context.loginUser.name}" disableEditLink="${true}"/>
-				</jsp:attribute>
-			</sidebar:sidebarItem>
-
+			<sidebar:conceptsItem 
+				usersOwnRelations="${true}" 
+				requestedUserName="${command.context.loginUser.name}" 
+				cmd="${command.concepts}" 
+				disableEditLink="${true}"
+				headingLink="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}"
+				headingTitleKey="tagrelations.user.title"
+				/>
 
 			<sidebar:sidebarTagCloudItem requPath="user/${command.context.loginUser.name}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" />
 
