--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/concept.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/concept.jspx
@@ -82,32 +82,27 @@
 			<!--  links to tag / concept pages -->
 			<parts:tagsAndConceptsForSidebar/>
 			
-			<!-- display user's tag relations -->			
-			<sidebar:sidebarItem textKey="tagrelations">
-				<jsp:attribute name="content">
-					<c:choose>
-						<c:when test="${not empty command.requestedUser}">
-							<fmt:message var="tagRelationsTitle" key="tagrelations.user.title"/>
-							<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}" title="${tagRelationsTitle}">
-								<fmt:message key="tagrelations.user"/>
-							</a>
-						</c:when>
-						<c:when test="${not empty command.requestedGroup}">
-							<fmt:message var="tagRelationsTitle" key="tagrelations.group.title"/>
-							<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedGroup)}" title="${tagRelationsTitle}">
-								<fmt:message key="tagrelations.group"/>
-							</a>
-						</c:when>						
-						<c:otherwise>
-							<fmt:message var="tagRelationsTitle" key="tagrelations.all.title"/>
-							<a href="/concepts" title="${tagRelationsTitle}">
-								<fmt:message key="tagrelations.all"/>
-							</a>
-						</c:otherwise>
-					</c:choose>
-					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}" requestedConcepts="${command.requestedTagsList}"/>
-				</jsp:attribute>
-			</sidebar:sidebarItem>
+			<!-- display user's/groups tag relations -->			
+			<c:set var="headingLink" value="/concepts"/>
+			<c:set var="headingTitleKey" value="tagrelations.all.title"/>
+			<c:choose>
+				<c:when test="${not empty command.requestedUser}">
+					<c:set var="headingLink" value="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}"/>
+					<c:set var="headingTitleKey" value="tagrelations.user.title"/>
+				</c:when>
+				<c:when test="${not empty command.requestedGroup}">
+					<c:set var="headingLink" value="${relativeUrlGenerator.getConceptsUrlByString(command.requestedGroup)}"/>
+					<c:set var="headingTitleKey" value="tagrelations.group.title"/>
+				</c:when>						
+			</c:choose>
+			
+			<sidebar:conceptsItem 
+				cmd="${command.concepts}" 
+				usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" 
+				requestedUserName="${command.requestedUser}" 
+				requestedConcepts="${command.requestedTagsList}"
+				headingLink="${headingLink}" 
+				headingTitleKey="${headingTitleKey}"/>
 
 
 			<!-- if requestedUser is set, show the tag cloud -->			
