--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -980,14 +980,17 @@ h4.pub-details {
 	display: none;
 }
 
-div.pub-citation-tab-content {
-
-	height: 132px;
+div.pub-citation-tab-content,
+div.pub-person-tab-content {
 	border-bottom: 1px solid #ddd;
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
 	padding: 1em;
 	border-radius: 0 0 4px 4px;
+}
+
+div.pub-citation-tab-content {
+	height: 132px;
 }
 
 div.pub-citation-tab-content textarea {
