--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -61,3 +61,6 @@
 
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.css";
+
+/** author (person-entity) pages */
+@import "bootstrap-authors.less";
