'new thesis' button in the 'own thesis' tab is fixed.

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editPublication.jspx
@@ -41,6 +41,7 @@
 					<hr />
 				</c:if>
 			</c:if>
+			<input type="hidden" name="person_name_id" value="${command.person_name_id}"/>	
 			<editpub:required post="${command.post}" autocompletion="$(false)"/>
 		</jsp:attribute>
 		
