--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
@@ -58,7 +58,8 @@
 						
 							<input type="hidden" name="selTab" value="0" />
 							<input type="hidden" name="ckey" value="${ckey}"/>
-							<input type="hidden" name="person_name_id" value="${command.person_name_id}"/> 
+							<input type="hidden" name="personId" value="${command.personId}"/> 
+							<input type="hidden" name="person_lastName" value="${command.person_lastName}"/>
 							
 							<editpub:required post="${post}" autocompletion="${true}" hideBibTeXKey="${true}"/>
 							
