--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -447,7 +447,7 @@
 			</fieldset>
 		</jsp:attribute>
 		<jsp:attribute name="modalFooter">
-			<form action="" method="post">
+			<form action="/postPublication/supervisor/${command.person.id}/${command.person.mainName.lastName}" method="post">
 				<input type="hidden" name='formAction' value='newThesis'/>
 				<input type="submit" class="btn btn-primary pull-left" name='submit' value='${textNewThesisButton}' />
 			</form>
