--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
@@ -60,6 +60,7 @@
 							<input type="hidden" name="ckey" value="${ckey}"/>
 							<input type="hidden" name="personId" value="${command.personId}"/> 
 							<input type="hidden" name="person_lastName" value="${command.person_lastName}"/>
+							<input type="hidden" name="person_role" value="${command.person_role}"/>
 							
 							<editpub:required post="${post}" autocompletion="${true}" hideBibTeXKey="${true}"/>
 							
