--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/author.jspx
@@ -29,10 +29,24 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.author" formAction="${relativeUrlGenerator.getAuthorUrlByName(requestedAuthorEncoded)}" formInputName="tag">
+			<c:choose>
+				<c:when test="${not empty command.scope and command.scope.name() ne 'LOCAL'}">
+					<c:choose>
+						<c:when test="${command.scope.name() eq 'FEDERATED_AUTHOR' }">
+							<c:set var="pathMessageKey" value="navi.federatedAuthor"/>
+							<c:set var="authorUrl" value="${relativeUrlGenerator.getAuthorUrlByName(requestedAuthorEncoded)}?scope=${command.scope.name()}"/>
+						</c:when>
+					</c:choose>
+				</c:when>
+				<c:otherwise>
+					<c:set var="pathMessageKey" value="navi.author"/>							
+					<c:set var="authorUrl" value="${relativeUrlGenerator.getAuthorUrlByName(requestedAuthorEncoded)}"/>
+				</c:otherwise>
+			</c:choose>
+			<parts:search scope="${command.scope}" pathMessageKey="${pathMessageKey}" formAction="${authorUrl}" formInputName="tag">
 				<jsp:attribute name="pathPart">
 					<span itemscope="itemscope" itemtype="http://schema.org/Person">
-						<a href="${relativeUrlGenerator.getAuthorUrlByName(requestedAuthorEncoded)}" itemprop="name"><c:out value='${command.requestedAuthor}'/></a>
+						<a href="${authorUrl}" itemprop="name"><c:out value='${command.requestedAuthor}'/></a>
 					</span>
 				</jsp:attribute>
 			</parts:search>
@@ -42,7 +56,7 @@
 			<ul>
 				<li>
 					<h4 class="tagcloud-headline sidebar-headline sidebar"><fmt:message key="tags"/></h4>
-					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
+					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" scope="${command.scope.name()}"/>
 				</li>
 			</ul>
 		</jsp:attribute>
