--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
@@ -22,9 +22,19 @@
 	
 	<layout:resourceLayout pageTitle="${command.pageTitle}" command="${command}" requPath="${requPath}" activeTab="${(command.requestedUser eq command.context.loginUser.name) ? 'my' : ''}" headline="${headline}${command.requestedUser}">
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.user" formAction="${relativeUrlGenerator.getUserUrlByUserName(command.requestedUser)}" formInputName="tag" requestedUser="${command.requestedUser}">
+			<c:choose>
+				<c:when test="${not empty command.scope and command.scope.name() ne 'LOCAL'}">
+					<c:set var="pathMessageKey" value="navi.federatedUser"/>
+					<c:set var="userUrl" value="${relativeUrlGenerator.getUserUrlByUserName(command.requestedUser)}?scope=${command.scope.name()}"/>
+				</c:when>
+				<c:otherwise>
+					<c:set var="pathMessageKey" value="navi.user"/>							
+					<c:set var="userUrl" value="${relativeUrlGenerator.getUserUrlByUserName(command.requestedUser)}"/>
+				</c:otherwise>
+			</c:choose>
+			<parts:search scope="${command.scope}" pathMessageKey="${pathMessageKey}" formAction="${userUrl}" formInputName="tag"  requestedUser="${command.requestedUser}">
 				<jsp:attribute name="pathPart">
-					<a href="${relativeUrlGenerator.getUserUrlByUserName(command.requestedUser)}"><user:username username="${command.requestedUser}" /></a> 
+					<a href="${userUrl}"><user:username username="${command.requestedUser}" /></a> 
 				</jsp:attribute>
 			</parts:search>
 		</jsp:attribute>
@@ -94,7 +104,7 @@
 				<!-- display tags -->
 				<li>
 					<h4 class="tagcloud-headline sidebar-headline sidebar"><fmt:message key="tags"/></h4>
-					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" tagSizeMode="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
+					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" tagSizeMode="user" scope="${command.scope.name()}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
 				</li>
 				
 				<c:if test="${command.context.loginUser.role == 'ADMIN' and not empty command.user}">
