--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
@@ -14,6 +14,7 @@
 	xmlns:spheres="urn:jsptagdir:/WEB-INF/tags/bstags/spheres"
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs"	
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:group="urn:jsptagdir:/WEB-INF/tags/bstags/resources/group"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -90,6 +91,26 @@
 					
 					<users:related cmd="${command.relatedUserCommand}" displayFollowLink="${false}" personalized="${true}" userSimilarity="${command.userSimilarity}"/>
 				</li>
+				
+				<!-- display groups that the users share
+				-->
+				<li>
+					<h4 class="sidebar shared-groups-headline sidebar-headline">
+						<fmt:message key="user.sharedGroups"/>
+					</h4>
+					
+					<ul class="list-inline sidebar-setting-box clearfix">
+						<c:forEach var="group" items="${command.sharedGroups}">
+							<li>
+								<a href="${relativeUrlGenerator.getGroupUrlByGroupName(group.name)}">
+									<group:groupname group="${group}" noLink="${false}" showRealname="${false}"/>
+								</a>
+							</li>
+						</c:forEach>
+					</ul>
+				</li>
+
+				
 		
 				<!-- display tags -->
 				<li>
