--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
@@ -111,7 +111,7 @@
 							| complete Post
 							+-->
 			
-						<div class="title">
+						<div class="title" itemscope="itemscope" itemtype="http://schema.org/CreativeWork">
 							<c:choose>
 								<c:when test="${isPub}">
 									<c:choose>
@@ -122,7 +122,7 @@
 												<div class="media">
 													<div class="media-body" id="titletext">
 														<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bibtex"/></div>
-														<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" />
+														<h1 class="media-heading" id="pubtitle" itemprop="name"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" />
 															<c:if test="${newestPost.approved}">
 																<a title="${fn:escapeXml(approved)}">
 																	<span class="fa fa-check-circle" style="margin-left:6px;"><!--  --></span>
@@ -157,9 +157,9 @@
 											<div class="media">
 												<div class="media-body" id="titletext">
 													<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bookmark"/></div>
-													<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
+													<h1 class="media-heading" id="pubtitle" itemprop="name"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
 													<c:set var="url" value="${newestPost.resource.url}" />
-													<p><a href="${url}"><c:out value="${url}" /></a></p>
+													<p><a href="${url}" itemprop="url"><c:out value="${url}" /></a></p>
 												</div>
 											</div>
 										</div>
@@ -171,9 +171,9 @@
 												<div class="media">
 												<div class="media-body" id="titletext">
 													<div class="pull-right"><buttons:actions post="${newestPost}" loginUserName="${command.context.loginUser.name}" resourceType="bookmark"/></div>
-													<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
+													<h1 class="media-heading" id="pubtitle" itemprop="name"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
 													<c:set var="url" value="${newestPost.resource.url}" />
-													<p><a href="${url}"><c:out value="${url}" /></a></p>
+													<p><a href="${url}" itemprop="url"><c:out value="${url}" /></a></p>
 												</div>
 												</div>
 											</div>
@@ -206,6 +206,8 @@
 
 									<tbody>
 										<c:forEach var="index" begin="0" end="${fieldlength}" varStatus="loopStatus" step="1">
+											<div itemscope="itemscope" itemtype="http://schema.org/CreativeWork">
+											
 											<c:set var="historicalPost" value="${listView.list[(fieldlength-index)]}"/>
 											<c:set var="additionalItemClasses" value="${loopStatus.index % 2 == 0 ? 'odd' : 'even'}" />
 											<tr> 
@@ -358,6 +360,7 @@
 													</div>
 												</td>
 											</tr>
+											</div>
 										</c:forEach>
 									</tbody>
 								</table>
