form reworked for #2357

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
@@ -70,8 +70,16 @@
 					</div>
 				</li>
 					
+				<!-- group description -->
+				<c:if test="${not empty group.description}">
+				<li>
+					<h4 class="sidebar"><fmt:message key="group.description.headline" /></h4>
+					<p><c:out value="${group.description}" /></p>
+					
+				</li>
+				</c:if>
+				<rc:members group="${command.group}"/>
 
-				
 				<!-- group members -->
 				<rc:members group="${command.group}"/>
 				
